[WIP] No longer use common compression.